--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.22.5",
+    "firebase": "^9.0.1",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
